# watchbot

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: bandit.yml  test.yml
api_watchbot/: bot.py  main.py  watchbot.py
tests/: test_main.py
